--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
     <head>
         <title>
-            HTML Practice Assigenment 1
+            HTML Assignment 1
         </title>
         <link rel="icon" href="./Img/download.jfif">
     </head>
     <body>
-        <h1>Practice Assigenment 1</h1>
+        <h1>Practice Assignment 1</h1>
         <hr>
         <a href="https://www.google.com"target="_blank">Link to Open Google in new tab</a>
         <br>
